# docxside-pdf

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  roadmap.md
.claude/: settings.local.json
showcase/: README.md
src/: docx.rs  error.rs  fonts.rs  lib.rs  main.rs  model.rs  pdf.rs
tests/: text_boundary.rs  visual_comparison.rs
tests/common/: mod.rs
tests/fixtures/case1/: input.docx
tests/fixtures/case10/: input.docx
tests/fixtures/case11/: generate.py  input.docx
tests/fixtures/case2/: input.docx
tests/fixtures/case3/: input.docx
tests/fixtures/case4/: input.docx
tests/fixtures/case5/: input.docx
tests/fixtures/case6/: input.docx
tests/fixtures/case7/: input.docx
tests/fixtures/case9/: input.docx
tests/fixtures/sample100kB/: input.docx
tools/: Cargo.toml  graph.py  showcase.py
