[package]
name = "docxside-pdf"
version = "0.4.0"
edition = "2024"
description = "Convert DOCX files to PDF, matching Microsoft Word's output as closely as possible"
license = "Apache-2.0"
repository = "https://github.com/sverrejb/docxside-pdf"
keywords = ["experimental", "docx", "pdf", "word", "converter"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "tools/",
    "tests/",
    "showcase/",
    "lancedb/",
    "models/",
    "specs/",
    "CLAUDE.md",
    ".claude/",
    ".gitignore",
]

[lib]
name = "docxside_pdf"
path = "src/lib.rs"

[[bin]]
name = "docxside-pdf"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "env_logger"]

[dependencies]
zip = "2"
roxmltree = "0.21"
pdf-writer = "0.14"
ttf-parser = "0.25"
log = "0.4"
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
image = "0.25"
